apps/base/manifest-substreams/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: manifest
  labels:
    istio-injection: enabled
