apps/base/manifest-substreams/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manifest-deployment-substreams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manifest-substreams
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: manifest-substreams
    spec:
      containers:
        - name: manifest-substreams-prometheus-sink
          image: gcleroux/test-substreams-prometheus-sink:v1.1.0
          args:
            [
              "run",
              "https://github.com/pinax-network/substreams/releases/download/eosio.token-v0.11.1/eosio-token-v0.11.1.spkg",
              "map_transfers",
              "-e",
              "https://eos.firehose.eosnation.io:9001",
              "--verbose",
              "-s",
              "-1",
              "--address",
              "0.0.0.0"
            ]
          ports:
            - containerPort: 9102
