apps/base/manifest-substreams/service-manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-manifest
  labels:
    app: manifest-substreams
spec:
  ports:
    - port: 9102
      targetPort: 9102
      protocol: TCP
  selector:
    app: manifest-substreams
