apps/base/manifest-substreams/virtual-svc.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: manifest-route
spec:
  hosts:
    - "*"
  gateways:
    - public-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: svc-manifest
            port:
              number: 9102
